--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,14 @@
 	"semi": true,
 	"trailingComma": "es5",
 	"singleQuote": false,
-	"endOfLine": "lf"
+	"endOfLine": "lf",
+	"plugins": ["@trivago/prettier-plugin-sort-imports"],
+	"importOrder": [
+		"^@/(?!components|app/).*",
+		"^@/components/(.*)$",
+		"^@/app/(.*)$",
+		"^[./]"
+	],
+	"importOrderSeparation": true,
+	"importOrderSortSpecifiers": true
 }
