--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"next": "14.2.4",
+		"next-auth": "5.0.0-beta.19",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
