--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
 # DATABASE
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+DB_URL=
 
 # AUTH
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
+AUTH_SECRET=
