--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.4.1",
+		"@neondatabase/serverless": "^0.9.3",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-query": "5.45.1",
@@ -23,7 +24,6 @@
 		"drizzle-orm": "^0.31.2",
 		"next": "14.2.4",
 		"next-auth": "5.0.0-beta.19",
-		"pg": "^8.12.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.3.0",
@@ -32,7 +32,6 @@
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/node": "^20.14.8",
-		"@types/pg": "^8.11.6",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"drizzle-kit": "^0.22.7",
