--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-	"name": "tiktok-techjam-ui",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "eslint . --fix --max-warnings=0",
-		"prettier": "prettier --write .",
-		"prepare": "husky",
-		"generate": "drizzle-kit generate",
-		"migrate": "drizzle-kit migrate"
-	},
-	"dependencies": {
-		"@auth/drizzle-adapter": "^1.4.1",
-		"@neondatabase/serverless": "^0.9.3",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@tanstack/react-query": "5.45.1",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.31.2",
-		"next": "14.2.4",
-		"next-auth": "5.0.0-beta.19",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"tailwind-merge": "^2.3.0",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
-		"@types/node": "^20.14.8",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"drizzle-kit": "^0.22.7",
-		"eslint": "^8.57.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-next": "14.2.4",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-prettier": "^5.1.3",
-		"husky": "^9.0.11",
-		"postcss": "^8.4.38",
-		"prettier": "^3.3.2",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.5.2"
-	},
-	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": "npm run lint",
-		"*.--write": "prettier --write"
-	}
+  "name": "tiktok-techjam-ui",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint . --fix --max-warnings=0",
+    "prettier": "prettier --write .",
+    "prepare": "husky",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
+  },
+  "dependencies": {
+    "@auth/drizzle-adapter": "^1.4.1",
+    "@neondatabase/serverless": "^0.9.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "5.45.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
+    "next": "14.2.4",
+    "next-auth": "5.0.0-beta.19",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^20.14.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.22.7",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "npm run lint",
+    "*.--write": "prettier --write"
+  }
 }
