--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
+    "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
     "react": "^18.3.1",
