--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"typescript": "^5.5.2"
 	},
 	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": "npm run lint",
+		"*.{js,jsx,ts,tsx}": "npm run lint && npx tsc --noEmit",
 		"*.--write": "prettier --write"
 	}
 }
