--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-query": "5.45.1",
+		"@types/react-lottie": "^1.2.10",
 		"@typescript-eslint/eslint-plugin": "^7.14.1",
 		"@typescript-eslint/parser": "^7.14.1",
 		"class-variance-authority": "^0.7.0",
@@ -35,6 +36,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.2.1",
+		"react-lottie": "^1.2.4",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
