--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
-		"@tanstack/react-query": "5.45.1",
+		"@tanstack/react-query": "^5.50.1",
 		"@types/react-lottie": "^1.2.10",
 		"@typescript-eslint/eslint-plugin": "^7.14.1",
 		"@typescript-eslint/parser": "^7.14.1",
@@ -43,6 +43,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.50.1",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/node": "^20.14.8",
 		"@types/react": "^18.3.3",
