--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/react-lottie": "^1.2.10",
 		"@typescript-eslint/eslint-plugin": "^7.14.1",
 		"@typescript-eslint/parser": "^7.14.1",
+		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
